--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=marjo
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -63,3 +63,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLIENT_ID="98067948693-lithsi91l6h04ft1e1c8imhtendipiis.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+GOOGLE_REDIRECT="https://c3d7-41-60-234-24.eu.ngrok.io/"
