--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
-        "laravel/passport": "^11.3",
+        "laravel/passport": "^11.8",
         "laravel/sanctum": "^2.14.1",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
