--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^2.14.1",
         "laravel/socialite": "^5.6",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "opcodesio/log-viewer": "^2.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.8",
